Add comments for ThreadPoolTaskExecutorSample and improve output intervals